tests/ui/unquote_not_in_quote.stderr
error: template tags besides `raw` and `quote` are only supported in quoted output
 --> tests/ui/unquote_not_in_quote.rs:5:9
  |
5 |         [<unquote>]
  |         ^^^^^^^^^^^
